# meeting_asr

./: .env.example  .gitignore  README.md  SPEC_MeetingMind_v2.md  pyproject.toml  qwen_asr_doc.md  render.yaml  requirements.txt  transcript_2026-04-13.json
backend/: config.py  main.py  requirements.txt
frontend/api/: client.js
frontend/pages/: index.html  status.html  summary.html  transcript.html
frontend/styles/: main.css
