[project]
name = "meeting-asr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "dashscope>=1.25.16",
    "fastapi>=0.135.3",
    "jinja2>=3.1.6",
    "moviepy>=2.2.1",
    "openai>=2.31.0",
    "oss2>=2.19.1",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.26",
    "requests>=2.33.1",
    "slowapi>=0.1.9",
    "uvicorn>=0.44.0",
]
